src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithPlatformClass/ValidWithPlatformClass.php
<?php

namespace Valid\WithPlatformClass;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithPlatformClass extends PluginBundle
{
}